--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
