--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.1",
+    "@shopify/shopify-api": "^5.0.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
