--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@shopify/shopify-api": "^5.0.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
