--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.1",
+    "@headlessui/react": "^1.7.2",
     "@shopify/shopify-api": "^5.0.1",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.11",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
